# gippity

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  Makefile  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  python.yml
fixtures/usccb/: sample_1.html
scripts/: check.sh
src/: requests.py
src/flask/: __init__.py
src/lectio_plus/: __init__.py  app.py  cache.py  curator.py  html_build.py  parse.py  prompts.py  scrape.py
src/pkg/: __init__.py
tests/: conftest.py  test_app_end_to_end_offline.py  test_app_smoke.py  test_curator.py  test_html_build.py  test_html_page.py  test_parse.py  test_parse_usccb.py  test_pdf.py  test_prompts.py  test_scrape_usccb.py  test_smoke.py
