[project]
name = "lectio_plus"
version = "0.1.0"
description = "Scaffolded package for tests"
requires-python = ">=3.10"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.mypy]
python_version = "3.10"
warn_unused_configs = true

[tool.ruff]
line-length = 88
src = ["src", "tests"]
